<resources>

    <string name="app_name">CarRecord</string>
    
    <string name="setting">设置</string>
    <string name="setting_luyin">录音的同时录制语音</string>
    <string name="setting_fenduan">分段录制</string>
    <string name="setting_open">打开APP自动进入录像</string>
    <string name="setting_usb">USB监听</string>
    <string name="setting_resolution">视频分辨率</string>    
    <string name="setting_auto">关于行车记录仪</string>
    <string name="title_about">关于</string>
    <string name="setting_exit">退出</string>
    <string name="video_start">开始</string>
    <string name="video_stop">停止</string>
    <string name="video">视频</string>
    <string name="video_all">临时视频</string>
    <string name="video_permanent">永久视频</string>
    <string name="video_delete">说明</string>
    <string name="video_returns">返回</string>
    <string name="tips">温馨提示：感谢您的使用，该软件所有功能全部免费，且不会添加任何商业广告，请您放心使用!</string>
    <string name="loadding_all">已加载全部</string>
    <string name="loadtime">加载时间中....</string>
    <string name="dialog_loadtext">正在加载视频....</string>
    <string name="menu_delete">删除选中项</string>
    <string name="menu_sava">永久存储</string>
    <string name="menu_cancel">取消</string>
    <string name="menu_affrim">确认</string>
    <string name="open">运行</string>
    <string name="nosetting">未设置</string>
    <string name="deletefailure">删除失败</string>
    <string name="settingfailure">设置失败</string>
    <string name="error_spit">分段录制间隔不能小于0</string>
    <string name="error_source">获取数据失败,请重启程序</string>
    <string name="video_dianliang">电 量：</string>
    <string name="video_lzjd">录制进度：</string>
    <string name="about_upload">检测更新</string>
    <string name="about_fankui">建议反馈</string>
    <string name="log">亲爱的用户：您好，非常感谢您使用本软件。由于本软件中所有界面及功能都是个人设计并开发出来的，请尊重开发者的劳动成果。如有诸多不足请原谅，本程序将不定时更新，恕不另行通知。请您谅解！ 如对该软件存在疑问或好的建议请在软件下载处留言！</string>
    

</resources>
