<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:umadsdk="http://schemas.android.com/apk/res/com.LoveBus">
    <LinearLayout android:orientation="vertical" android:background="@drawable/play_background" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <include layout="@layout/title" />
        <ImageView android:background="@drawable/white_spit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="-2.0dip" />
        <LinearLayout android:id="@id/linearLayout1" android:background="@drawable/white_background" android:layout_width="fill_parent" android:layout_height="35.0dip">
            <TextView android:textSize="20.0dip" android:textColor="@color/greens" android:gravity="center" android:id="@id/text1" android:background="@drawable/more_text_background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/video_all" android:layout_weight="1.0" />
            <TextView android:textSize="20.0dip" android:textColor="@color/white" android:gravity="center" android:id="@id/text2" android:background="@drawable/more_text_background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/video_permanent" android:layout_weight="1.0" />
            <TextView android:textSize="20.0dip" android:textColor="@color/white" android:gravity="center" android:id="@id/text3" android:background="@drawable/more_text_background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/video_delete" android:layout_weight="1.0" />
        </LinearLayout>
        <ImageView android:id="@id/cursor" android:layout_width="fill_parent" android:layout_height="8.0dip" android:src="@drawable/a" android:scaleType="matrix" />
        <ImageView android:background="@drawable/white_spit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="-2.0dip" />
        <android.support.v4.view.ViewPager android:layout_gravity="center" android:id="@id/vPager" android:persistentDrawingCache="animation" android:layout_width="fill_parent" android:layout_height="fill_parent" android:flipInterval="30" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
