<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/setting_title_background" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <include layout="@layout/title" />
        <ImageView android:background="@drawable/white_spit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="-2.0dip" />
        <com.qi.carrecord.view.SlowScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="16.0dip" android:textColor="@drawable/text_color" android:id="@id/setting_luyin" android:background="@drawable/more_text_background" android:paddingLeft="10.0dip" android:layout_height="55.0dip" android:layout_marginTop="1.0dip" android:text="@string/setting_luyin" style="@style/rest_list_text" />
                        <LinearLayout android:gravity="right|center" android:orientation="horizontal" android:paddingRight="30.0dip" android:layout_width="fill_parent" android:layout_height="55.0dip">
                            <ImageButton android:id="@id/setting_luyinicon" android:background="@drawable/switch_close" android:layout_width="60.0dip" android:layout_height="35.0dip" />
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>
                <ImageView android:background="@drawable/white_spit" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="16.0dip" android:textColor="@drawable/text_color" android:id="@id/setting_fenduan" android:background="@drawable/more_text_background" android:paddingLeft="10.0dip" android:layout_height="55.0dip" android:layout_marginTop="1.0dip" android:text="@string/setting_fenduan" style="@style/rest_list_text" />
                        <LinearLayout android:gravity="right|center" android:orientation="horizontal" android:paddingRight="50.0dip" android:layout_width="fill_parent" android:layout_height="55.0dip">
                            <TextView android:textSize="14.0dip" android:textColor="@color/white" android:id="@id/setting_fenduan_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nosetting" />
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>
                <ImageView android:background="@drawable/white_spit" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="16.0dip" android:textColor="@drawable/text_color" android:id="@id/setting_open" android:background="@drawable/more_text_background" android:paddingLeft="10.0dip" android:layout_height="55.0dip" android:layout_marginTop="1.0dip" android:text="@string/setting_open" style="@style/rest_list_text" />
                        <LinearLayout android:gravity="right|center" android:orientation="horizontal" android:paddingRight="30.0dip" android:layout_width="fill_parent" android:layout_height="55.0dip">
                            <ImageButton android:id="@id/setting_open_icon" android:background="@drawable/switch_close" android:layout_width="60.0dip" android:layout_height="35.0dip" />
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>
                <ImageView android:background="@drawable/white_spit" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="16.0dip" android:textColor="@drawable/text_color" android:id="@id/setting_usb" android:background="@drawable/more_text_background" android:paddingLeft="10.0dip" android:layout_height="55.0dip" android:layout_marginTop="1.0dip" android:text="@string/setting_usb" style="@style/rest_list_text" />
                        <LinearLayout android:gravity="right|center" android:orientation="horizontal" android:paddingRight="30.0dip" android:layout_width="fill_parent" android:layout_height="55.0dip">
                            <ImageButton android:id="@id/setting_usb_icon" android:background="@drawable/switch_close" android:layout_width="60.0dip" android:layout_height="35.0dip" />
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>
                <ImageView android:background="@drawable/white_spit" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="16.0dip" android:textColor="@drawable/text_color" android:id="@id/setting_resolution" android:background="@drawable/more_text_background" android:paddingLeft="10.0dip" android:layout_height="55.0dip" android:layout_marginTop="1.0dip" android:text="@string/setting_resolution" style="@style/rest_list_text" />
                        <LinearLayout android:gravity="right|center" android:orientation="horizontal" android:paddingRight="50.0dip" android:layout_width="fill_parent" android:layout_height="55.0dip">
                            <Spinner android:textSize="14.0dip" android:textColor="@color/white" android:id="@id/setting_resolution_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:entries="@array/spingarr" />
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout> 
                <ImageView android:background="@drawable/white_spit" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="16.0dip" android:textColor="@drawable/text_color" android:id="@id/setting_auto" android:background="@drawable/more_text_background" android:paddingLeft="10.0dip" android:layout_height="55.0dip" android:layout_marginTop="1.0dip" android:text="@string/setting_auto" style="@style/rest_list_text" />
                <ImageView android:background="@drawable/white_spit" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="16.0dip" android:textColor="@drawable/text_color" android:id="@id/setting_exit" android:background="@drawable/more_text_background" android:paddingLeft="10.0dip" android:layout_height="55.0dip" android:layout_marginTop="1.0dip" android:text="@string/setting_exit" style="@style/rest_list_text" />
                <ImageView android:background="@drawable/white_spit" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </LinearLayout>
        </com.qi.carrecord.view.SlowScrollView>
    </LinearLayout>
</LinearLayout>
