<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <SurfaceView android:id="@id/surfaceView" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="horizontal" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="1.0">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <ImageView android:id="@id/video_icon" android:background="@drawable/shape" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginTop="3.0dip" />
                <TextView android:textSize="18.0dip" android:textColor="@color/white" android:id="@id/currenttime" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" android:text="@string/loadtime" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="bottom" android:orientation="horizontal" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </LinearLayout>
    <RelativeLayout android:gravity="right" android:paddingRight="100.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:background="@color/black" android:layout_width="2.0dip" android:layout_height="fill_parent" />
    </RelativeLayout>
    <RelativeLayout android:gravity="right" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:background="@drawable/xc_bg_black_bs" android:layout_width="100.0dip" android:layout_height="fill_parent" android:weightSum="1.0">
            <LinearLayout android:gravity="center_vertical" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
                <ImageButton android:id="@id/btn_video" android:background="@drawable/xc_video_start_bg" android:layout_width="80.0dip" android:layout_height="80.0dip" android:layout_marginTop="28.0dip" />
            </LinearLayout>
            <RelativeLayout android:gravity="bottom" android:layout_width="100.0dip" android:layout_height="60.0dip">
                <LinearLayout android:orientation="vertical" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <TextView android:textSize="12.0dip" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="2.0dip" android:text="@string/video_dianliang" />
                        <TextView android:textSize="12.0dip" android:textColor="@color/white" android:id="@id/dianliang" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="2.0dip" android:text="100%" />
                    </LinearLayout>
                    <ProgressBar android:id="@id/battery" android:layout_width="90.0dip" android:layout_height="2.0dip" android:layout_marginTop="3.0dip" android:progress="100" style="@style/ProgressBar_Green" />
                    <TextView android:textSize="12.0dip" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="@string/video_lzjd" />
                    <ProgressBar android:id="@id/progress" android:layout_width="90.0dip" android:layout_height="2.0dip" android:layout_marginTop="3.0dip" android:progress="100" style="@style/ProgressBar_Green" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>    

</RelativeLayout>
